teampopuplinks.js: use function to generate options.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5536 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -64,7 +64,6 @@ foxtrick.HTDateFormat.desc=Adds the global/local HT week and season to the most 
 foxtrick.HTDateFormat.LocalSaison.desc=Display local season instead of global season
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Use custom offset to set your first day of the week (0 = monday/default, -2 = saturday)
 foxtrick.TeamPopupLinks.desc=Displays a small pop-up window with quick links when you hover over a teamid link
-foxtrick.TeamPopupLinksMore.desc=Shows a 'more...' link in team popup links box which reveals following 'more' shortcuts.
 foxtrick.StaffMarker.desc=Marks officials' nicks on the forums and on team pages.
 foxtrick.StaffMarker.manager.desc=Mark officials' nicks on team pages.
 foxtrick.StaffMarker.own.desc=Personal markers (format with own userids): userId=1000 userId=1001 style='color:yellow !important;' userId=1002 style='background-color:yellow;)
@@ -264,45 +263,26 @@ foxtrick.LeagueNewsFilter.highlight_wins.desc=Hightlight winning teams in last r
 foxtrick.LeagueNewsFilter.gray_bots.desc=Gray bots and ownerless teams in match tables
 foxtrick.ShortPAs.desc=Show only expandable header of press announcements
 foxtrick.MoveManagerOnline.desc=Moves managers online up on region page. Caution! This gets very slow if the list of online players get over 100.
-foxtrick.TeamPopupLinks.OpenNewTab.desc=Open teampopups in new tabs
 foxtrick.TeamPopupLinks.TeamLinks.desc=Add TeamPopupLinks to team links
 foxtrick.TeamPopupLinks.UserLinks.desc=Add TeamPopupLinks to manager links
 foxtrick.TeamPopupLinks.Manager.desc=Link to the manager (for team links only)
-foxtrick.TeamPopupLinksMore.Manager.desc=Link to the manager (for team links only)
 foxtrick.TeamPopupLinks.Team.desc=Link to the team (for manager links only)
-foxtrick.TeamPopupLinksMore.Team.desc=Link to the team (for manager links only)
 foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Link to the team at Alltid
-foxtrick.TeamPopupLinksMore.TeamAtAlltid.desc=Link to the team at Alltid
 foxtrick.TeamPopupLinks.Matches.desc=Link to the last matches
-foxtrick.TeamPopupLinksMore.Matches.desc=Link to the last matches
 foxtrick.TeamPopupLinks.Players.desc=Link to the players page
-foxtrick.TeamPopupLinksMore.Players.desc=Link to the players page
 foxtrick.TeamPopupLinks.last_5_ips.desc=Link to the 5 latest logins
-foxtrick.TeamPopupLinksMore.last_5_ips.desc=Link to the 5 latest logins
 foxtrick.TeamPopupLinks.Guestbook.desc=Link to the guestbook
-foxtrick.TeamPopupLinksMore.Guestbook.desc=Link to the guestbook
 foxtrick.TeamPopupLinks.SendMessage.desc=Link to Send Message
-foxtrick.TeamPopupLinksMore.SendMessage.desc=Link to Send Message
 foxtrick.TeamPopupLinks.Challenge.desc=Link to challenge
-foxtrick.TeamPopupLinksMore.Challenge.desc=Link to challenge
 foxtrick.TeamPopupLinks.Achievements.desc=Link to Achievements
-foxtrick.TeamPopupLinksMore.Achievements.desc=Link to Achievements
 foxtrick.TeamPopupLinks.TransferHistory.desc=Link to the transfer history
-foxtrick.TeamPopupLinksMore.TransferHistory.desc=Link to the transfer history
 foxtrick.TeamPopupLinks.TeamHistory.desc=Link to the team history
-foxtrick.TeamPopupLinksMore.TeamHistory.desc=Link to the team history
 foxtrick.TeamPopupLinks.LastLineup.desc=Link to the last lineup
-foxtrick.TeamPopupLinksMore.LastLineup.desc=Link to the last lineup
 foxtrick.TeamPopupLinks.NextMatch.desc=Link to the next match
-foxtrick.TeamPopupLinksMore.NextMatch.desc=Link to the next match
 foxtrick.TeamPopupLinks.AddNextMatch.desc=Adds next match to HT Live
-foxtrick.TeamPopupLinksMore.AddNextMatch.desc=Adds next match to HT Live
 foxtrick.TeamPopupLinks.YouthMatches.desc=Link to the youth matches
-foxtrick.TeamPopupLinksMore.YouthMatches.desc=Link to the youth matches
 foxtrick.TeamPopupLinks.Coach.desc=Link to the Coach
-foxtrick.TeamPopupLinksMore.Coach.desc=Link to the Coach
 foxtrick.TeamPopupLinks.CustomLink.desc=Own links. The tags [userid] and [teamid] will be replaced by the appropriate ids.
-foxtrick.TeamPopupLinksMore.CustomLink.desc=Own links. The tags [userid] and [teamid] will be replaced by the appropriate ids.
 foxtrick.SkillColoring.desc=Better visualisation of skills
 foxtrick.SkillColoring.skill_color.desc=Colorises skills
 foxtrick.SkillColoring.only_skill_color.desc=Colorises skills only and not personalities, fan mood etc.
@@ -765,6 +745,8 @@ LastLineup=Last Lineup
 YouthMatches=Youth matches
 more=more...
 less=less...
+TeamPopupLinks.ShowByDefault=Show by default
+TeamPopupLinks.ShowOnMore=Show on more
 
 total_stars=Total stars
 
