teampopuplinks.js: some description modifications.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5539 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -263,26 +263,27 @@ foxtrick.LeagueNewsFilter.highlight_wins.desc=Hightlight winning teams in last r
 foxtrick.LeagueNewsFilter.gray_bots.desc=Gray bots and ownerless teams in match tables
 foxtrick.ShortPAs.desc=Show only expandable header of press announcements
 foxtrick.MoveManagerOnline.desc=Moves managers online up on region page. Caution! This gets very slow if the list of online players get over 100.
-foxtrick.TeamPopupLinks.TeamLinks.desc=Add TeamPopupLinks to team links
-foxtrick.TeamPopupLinks.UserLinks.desc=Add TeamPopupLinks to manager links
-foxtrick.TeamPopupLinks.Manager.desc=Link to the manager (for team links only)
-foxtrick.TeamPopupLinks.Team.desc=Link to the team (for manager links only)
-foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Link to the team at Alltid
-foxtrick.TeamPopupLinks.Matches.desc=Link to the last matches
-foxtrick.TeamPopupLinks.Players.desc=Link to the players page
-foxtrick.TeamPopupLinks.last_5_ips.desc=Link to the 5 latest logins
-foxtrick.TeamPopupLinks.Guestbook.desc=Link to the guestbook
-foxtrick.TeamPopupLinks.SendMessage.desc=Link to Send Message
-foxtrick.TeamPopupLinks.Challenge.desc=Link to challenge
-foxtrick.TeamPopupLinks.Achievements.desc=Link to Achievements
-foxtrick.TeamPopupLinks.TransferHistory.desc=Link to the transfer history
-foxtrick.TeamPopupLinks.TeamHistory.desc=Link to the team history
-foxtrick.TeamPopupLinks.LastLineup.desc=Link to the last lineup
-foxtrick.TeamPopupLinks.NextMatch.desc=Link to the next match
+foxtrick.TeamPopupLinks.prefsCaption=Link preferences
+foxtrick.TeamPopupLinks.TeamLinks.desc=Add popups to team links
+foxtrick.TeamPopupLinks.UserLinks.desc=Add popups to manager links
+foxtrick.TeamPopupLinks.Manager.desc=Manager (for team links only)
+foxtrick.TeamPopupLinks.Team.desc=Team (for manager links only)
+foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Team page at Alltid
+foxtrick.TeamPopupLinks.Matches.desc=Matches
+foxtrick.TeamPopupLinks.Players.desc=Players
+foxtrick.TeamPopupLinks.last_5_ips.desc=5 latest logins
+foxtrick.TeamPopupLinks.Guestbook.desc=Guestbook
+foxtrick.TeamPopupLinks.SendMessage.desc=Send message
+foxtrick.TeamPopupLinks.Challenge.desc=Challenge
+foxtrick.TeamPopupLinks.Achievements.desc=Achievement
+foxtrick.TeamPopupLinks.TransferHistory.desc=Transfer history
+foxtrick.TeamPopupLinks.TeamHistory.desc=Club history
+foxtrick.TeamPopupLinks.LastLineup.desc=Last lineup
+foxtrick.TeamPopupLinks.NextMatch.desc=Next Match
 foxtrick.TeamPopupLinks.AddNextMatch.desc=Adds next match to HT Live
-foxtrick.TeamPopupLinks.YouthMatches.desc=Link to the youth matches
-foxtrick.TeamPopupLinks.Coach.desc=Link to the Coach
-foxtrick.TeamPopupLinks.CustomLink.desc=Own links. The tags [userid] and [teamid] will be replaced by the appropriate ids.
+foxtrick.TeamPopupLinks.YouthMatches.desc=Youth matches
+foxtrick.TeamPopupLinks.Coach.desc=Coach
+foxtrick.TeamPopupLinks.CustomLink.desc=Custom links. The tags [userid] and [teamid] will be replaced by the actual IDs.
 foxtrick.SkillColoring.desc=Better visualisation of skills
 foxtrick.SkillColoring.skill_color.desc=Colorises skills
 foxtrick.SkillColoring.only_skill_color.desc=Colorises skills only and not personalities, fan mood etc.
