foxtrick.properties: fixed TeamPopupLinks.prefsCaption.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5540 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -263,7 +263,6 @@ foxtrick.LeagueNewsFilter.highlight_wins.desc=Hightlight winning teams in last r
 foxtrick.LeagueNewsFilter.gray_bots.desc=Gray bots and ownerless teams in match tables
 foxtrick.ShortPAs.desc=Show only expandable header of press announcements
 foxtrick.MoveManagerOnline.desc=Moves managers online up on region page. Caution! This gets very slow if the list of online players get over 100.
-foxtrick.TeamPopupLinks.prefsCaption=Link preferences
 foxtrick.TeamPopupLinks.TeamLinks.desc=Add popups to team links
 foxtrick.TeamPopupLinks.UserLinks.desc=Add popups to manager links
 foxtrick.TeamPopupLinks.Manager.desc=Manager (for team links only)
@@ -746,6 +745,7 @@ LastLineup=Last Lineup
 YouthMatches=Youth matches
 more=more...
 less=less...
+TeamPopupLinks.prefsCaption=Link preferences
 TeamPopupLinks.ShowByDefault=Show by default
 TeamPopupLinks.ShowOnMore=Show on more
 
