Removed auto detect currency.
It can be retrieved from country setting.

git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5557 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -304,7 +304,7 @@ foxtrick.SkillTable.OtherTeams.desc=Enable for other teams
 foxtrick.HighlightCupwins.desc=Highlight winning teams on cup matches page
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Highlight cupsets (matches won by the team of lower ranking)
 foxtrick.SkillTranslation.desc=Adds English translations to skills on help/denominations page
-foxtrick.ReadHtPrefs.desc=Automatically detect language, country, currency and date format
+foxtrick.ReadHtPrefs.desc=Automatically detect language, country, and date format
 foxtrick.OnPagePrefs.desc=Show a box in the sidebar for preferences of modules running on the current page.
 foxtrick.CountryList.desc=Modifications for country names
 foxtrick.CountryList.SelectBoxes.desc=Replaces English country names in select boxes by their original names
