Parse module and tab given in URI fragment.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5569 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -880,6 +880,7 @@ foxtrick.prefs.captionDisableSettings=Disable FoxTrick
 foxtrick.prefs.stagepref=Disable on Stage server
 foxtrick.prefs.disableTemporaryLabel=Disable temporarily
 foxtrick.prefs.saved=Preferences saved!
+foxtrick.prefs.moduleLink=(link)
 
 foxtrick.prefs.buttonSave=Save
 foxtrick.prefs.buttonCancel=Cancel
