--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -332,6 +332,7 @@ foxtrick.ForumThreadAutoIgnore.Tags.desc=List of tags, eg: NT, idea, Bug. Comma 
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by IDs (the part before the dot). Threads in whitelist will not be ignored. Comma separated.
 foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (including tables in forum postings)
 foxtrick.LiveAlert.desc=Alert HT Live goals
+foxtrick.OldStyleFace.desc=Show faces in old Hattrick style
 
 # -----------------------------------------------------------------------------
 
