Added changes tab in preferences interface.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5730 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -644,20 +644,7 @@ foxtrick.balancedTrainer=A %s trainer who is neither attack nor defence-minded.
 foxtrick.onpagepreferences=FoxTrick On-page Prefs
 foxtrick.modules_allpages=Modules running on all pages
 HTLanguageChanged=FoxTrick has detected a change in language. The language of FoxTrick is now set to %s.
-NewOrChangedModules=Following modules are new or have changed since
 Screenshot=Commented screenshot of module's features
-PreferenceScreenshot=Commented screenshot of resp. FoxTrick's preferences
-FoxtrickFirstRunScreenshotList=Complete list of commented screenshots (English):
-FoxtrickChangeLogHint=Hover over the icon '!' to see the latest changes (English).
-FoxtrickFirstRunSetChanged=Set preferences of new features now
-#  NOTE TO TRANSLATORS
-# You can use the following string to link to release notes in your language. The link better be generic, as you might not translate before actual release, i.e. link should be valid for all releases
-FoxtrickFirstRunReleaseNotes=Release notes (English):
-FoxtrickFirstRunReleaseNotesLink=http://www.ht-foxtrick.com/forum/viewforum.php?f=7
-#  NOTE TO TRANSLATORS
-# You can use the following string to link to a topic on Hattrick Forum in your language. In that case translate the string and replace 'languages' with your own language and add relative path to the forum topic in your national forum (go to your forum topic and copy link without 'http://www**.hattrick.org')
-FoxtrickFirstRunHelpPage=FoxTrick Help forum (English, German, Spanish, Italian):
-FoxtrickFirstRunHelpPageLink=/Forum/Read.aspx?t=13254684
 
 StyleTutorial.title=Styling FoxTrick
 StyleTutorial.content=FoxTrick provides a set of presentation interfaces for users to customise their own styles.\nThese interfaces are provided through HTML ids and classes, and you can use CSS to define your preferred style.\nAn example user style file can be found at %s, which you can modify to satisfy your need.\nIf you have problem with the link, copy and paste it to the address bar. After saving the file, you can use the SkinPlugin module for loading the CSS file to have the user style in effect.
@@ -889,6 +876,8 @@ foxtrick.prefs.buttonDisableAll=Disable all
 foxtrick.prefs.buttonSavePrefs=Save
 foxtrick.prefs.buttonLoadPrefs=Load
 foxtrick.prefs.activeCurrencyConverter=Enable currency converter
+
+foxtrick.versionReleaseNotes=Show release notes for: 
 
 about.headDevelopers=Head Developers
 about.projectOwners=Project Owners
