NtPeek module for peeking NT/U20 matches at MyHT.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5754 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -333,6 +333,7 @@ foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by 
 foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (including tables in forum postings)
 foxtrick.LiveAlert.desc=Alert HT Live goals
 foxtrick.OldStyleFace.desc=Show faces in old Hattrick style
+foxtrick.OldStyleFace.desc=Peeks NT/U20 matches at My Hattrick
 
 # -----------------------------------------------------------------------------
 
@@ -640,6 +641,10 @@ foxtrick.ExtendedPlayerDetails.perseason=/season
 foxtrick.defensiveTrainer=A %s trainer who is defence-minded.
 foxtrick.offensiveTrainer=A %s trainer who is fond of attacking.
 foxtrick.balancedTrainer=A %s trainer who is neither attack nor defence-minded.
+
+ntpeek.title=Recent National Matches
+matches.nt=NT Matches
+matches.u20=U20 Matches
 
 foxtrick.onpagepreferences=FoxTrick On-page Prefs
 foxtrick.modules_allpages=Modules running on all pages
