--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -333,7 +333,7 @@ foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by 
 foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (including tables in forum postings)
 foxtrick.LiveAlert.desc=Alert HT Live goals
 foxtrick.OldStyleFace.desc=Show faces in old Hattrick style
-foxtrick.OldStyleFace.desc=Peeks NT/U20 matches at My Hattrick
+foxtrick.NtPeek.desc=Peeks NT/U20 matches at My Hattrick
 
 # -----------------------------------------------------------------------------
 
