--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -642,7 +642,7 @@ foxtrick.defensiveTrainer=A %s trainer who is defence-minded.
 foxtrick.offensiveTrainer=A %s trainer who is fond of attacking.
 foxtrick.balancedTrainer=A %s trainer who is neither attack nor defence-minded.
 
-ntpeek.title=Recent National Matches
+ntpeek.title=Recent national matches
 matches.nt=NT Matches
 matches.u20=U20 Matches
 
