nt-peek.js: HT-Live for future matches.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5758 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -646,6 +646,8 @@ ntpeek.title=Recent national matches
 matches.nt=NT Matches
 matches.u20=U20 Matches
 
+htLive=HT Live
+
 foxtrick.onpagepreferences=FoxTrick On-page Prefs
 foxtrick.modules_allpages=Modules running on all pages
 HTLanguageChanged=FoxTrick has detected a change in language. The language of FoxTrick is now set to %s.
