manifest.json: added NtPeek for Google Chrome.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5760 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -82,6 +82,7 @@
 			"content/shortcuts_and_tweaks/playerFilters.js",
 			"content/shortcuts_and_tweaks/youthSeriesEstimation.js",
 			"content/shortcuts_and_tweaks/transferSearchResultFilters.js",
+			"content/shortcuts_and_tweaks/nt-peek.js",
 			"content/presentation/extendedplayerdetails.js",
 			"content/presentation/originalFace.js",
 			"content/presentation/movePlayerStatement.js",
