alert/: unify module file name style.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5815 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -128,11 +128,11 @@
 			"content/links/linksclubtransfers.js",
 			"content/links/linksstaff.js",
 			"content/links/linkstracker.js",
-			"content/alert/foxtrickalert.js",
-			"content/alert/alertcustom.js",
-			"content/alert/alertcustomsounds.js",
-			"content/alert/tickercoloring.js",
-			"content/alert/newmail.js",
+			"content/alert/foxtrick-alert.js",
+			"content/alert/alert-custom.js",
+			"content/alert/alert-custom-sounds.js",
+			"content/alert/ticker-coloring.js",
+			"content/alert/new-mail.js",
 			"content/alert/live-alert.js",
 			"content/presentation/currency-converter.js",
 			"content/shortcuts_and_tweaks/teampopuplinks.js",
