manifest.json: add update_url.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5838 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -165,5 +165,6 @@
 		"default_icon" : "skin/icon-128.png"
 	},
 	"options_page" : "content/preferences.xhtml",
+	"update_url" : "http://foxtrick.foundationhorizont.org/nightly/chrome/update.xml",
 	"version" : "0.5.3.65535"
 }
