Make HeaderCopyIcons a core module.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5874 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
 			"content/preferences-dialog-html.js",
 			"content/preferences-on-page.js",
 			"content/forum_stage.js",
+			"content/header-copy-icons.js",
 			"content/util/currency.js",
 			"content/util/note.js",
 			"content/util/time.js",
