Rearrange HTDateFormat, option LocalSaison renamed to LocalSeason.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5879 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -60,7 +60,7 @@ foxtrick.TransferSearchFilters.desc=Allows for transfer list search filter templ
 foxtrick.TransferSearchResultFilters.desc=Additional filters for filtering transfer search results
 foxtrick.TransferDeadline.desc=Adds an extra line to each search result on the transfermarket with days, hours and minutes until transfer ends
 foxtrick.HTDateFormat.desc=Adds the global/local HT week and season to the most important dates on HT pages
-foxtrick.HTDateFormat.LocalSaison.desc=Display local season instead of global season
+foxtrick.HTDateFormat.LocalSeason.desc=Display local season instead of global season
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Use custom offset to set your first day of the week (0 = monday/default, -2 = saturday)
 foxtrick.TeamPopupLinks.desc=Displays a small pop-up window with quick links when you hover over a teamid link
 foxtrick.StaffMarker.desc=Marks officials' nicks on the forums and on team pages.
