foxtrick.properties: description refined for ExtendedPlayerDetailsWage.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5908 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -182,7 +182,7 @@ foxtrick.ExtendedPlayerDetails.SD.desc=Display contract duration as seasons - da
 foxtrick.ExtendedPlayerDetails.WD.desc=Display contract duration as weeks - days
 foxtrick.ExtendedPlayerDetails.D.desc=Display contract duration as days
 foxtrick.ExtendedPlayerDetailsWage.desc=Shows wage without bonus and/or seasonal wage
-foxtrick.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Unchecking displays wage without bonus
+foxtrick.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Displays wage without bonus
 foxtrick.ExtendedPlayerDetailsWage.SeasonWage.desc=Displays seasonal wage
 foxtrick.FixcssProblems.desc=Fixes some Problems of wrong HT css styles
 foxtrick.FixcssProblems.Club_Menu_Teamnames.desc=Fixes cut of long teamnames on left menu
