Make showing release notes optional.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5910 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -874,6 +874,8 @@ foxtrick.prefs.stagepref=Disable on Stage server
 foxtrick.prefs.disableTemporaryLabel=Disable temporarily
 foxtrick.prefs.saved=Preferences saved!
 
+foxtrick.showReleaseNotes=Show release notes after FoxTrick updates
+
 foxtrick.prefs.buttonSave=Save
 foxtrick.prefs.buttonCancel=Cancel
 foxtrick.prefs.buttonExample=Example
