added guestbookhtmsflags.js as new working version of guestbookalltidflags.js still some tweaks to be done
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5928 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -333,6 +333,11 @@ foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (
 foxtrick.LiveAlert.desc=Alert HT Live goals
 foxtrick.OldStyleFace.desc=Show faces in old Hattrick style
 foxtrick.NtPeek.desc=Peeks NT/U20 matches at My Hattrick
+foxtrick.GuestbookHTMSFlags.desc=Show user flags provided by HTMS in guestbook posts module
+foxtrick.GuestbookHTMSFlags.AddHTMSFlags.desc=Enable the user flag
+foxtrick.GuestbookHTMSFlags.HideAnswerToLinks.desc=Hides the "answer to" link in each guestbook entry
+foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToSupporters.desc=Adds the user flags to the supporter list in the team page
+foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToVisitors.desc=Adds the user flags to the visitor list in the team page
 
 # -----------------------------------------------------------------------------
 
