manifest.json: add guestbook-htms-flags.js.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5934 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -107,6 +107,7 @@
 			"content/presentation/smaller-pages.js",
 			"content/presentation/background-fixed.js",
 			"content/presentation/old-style-face.js",
+			"content/presentation/guestbook-htms-flags.js",
 			"content/links/links.js",
 			"content/links/links-custom.js",
 			"content/links/links-league.js",
