--- a/manifest.json
+++ b/manifest.json
@@ -108,6 +108,7 @@
 			"content/presentation/background-fixed.js",
 			"content/presentation/old-style-face.js",
 			"content/presentation/guestbook-htms-flags.js",
+			"content/presentation/move-manager-online.js",
 			"content/links/links.js",
 			"content/links/links-custom.js",
 			"content/links/links-league.js",
