youth-promotes.js: show the earliest date to promote a player.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5944 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -364,10 +364,9 @@ foxtrick.HistoryStats.label=History stats
 foxtrick.HistoryStats.cupwinner=Cup winner
 foxtrick.HistoryStats.cupwinner.short=CW
 
-# YouthPromoteDays
-foxtrick.youthpromotedays.prom_d=Player can be promoted earliest in
-foxtrick.youthpromotedays.days=days.
-foxtrick.youthpromotedays.prom_t=Player can be promoted today!
+# YouthPromotes
+YouthPromotes.future=Player can be promoted %1 day(s) later at %2.
+YouthPromotes.today=Player can be promoted today!
 
 # links
 foxtrick.links.boxheader=Links
