Rename HighlightBotTeams to HighlightOwnerless and change default icon.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5953 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -257,7 +257,7 @@ foxtrick.LeagueNewsFilter.lineup_changes.desc=Show only lineup changes
 foxtrick.LeagueNewsFilter.PAs.desc=Show only press announcements
 foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Hightlight teams which changed or set line-up recently in next round table
 foxtrick.LeagueNewsFilter.highlight_wins.desc=Hightlight winning teams in last round table
-foxtrick.LeagueNewsFilter.gray_bots.desc=Gray bots and ownerless teams in match tables
+foxtrick.LeagueNewsFilter.gray_bots.desc=Gray ownerless teams in match tables
 foxtrick.ShortPAs.desc=Show only expandable header of press announcements
 foxtrick.MoveManagerOnline.desc=Moves managers online up on region page. Caution! This gets very slow if the list of online players get over 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Add popups to team links
@@ -312,7 +312,7 @@ foxtrick.MatchTables.desc=Removes white space on match tables on simple design
 foxtrick.MatchTables.RemoveTime.desc=Removes match time on current matches table
 foxtrick.YouthPromotes.desc=Shows days to promote a youth player
 foxtrick.htmsStatistics.desc=Adds statistics on score result on matches.
-foxtrick.HighlightBotTeams.desc=Highlights 'bot' and ownerless teams on the series page.
+foxtrick.HighlightOwnerless.desc=Highlights ownerless teams on the series page.
 foxtrick.LastLogin.desc=Displays time since last login on user's page
 foxtrick.TransferCompareSort.desc=Clicking on the header sorts the TransferCompare results by TSI, price or form
 foxtrick.ForumStripHattrickLinks.desc=Strips the server from internal links in forum to make them usable. Also adds whitespace for nested i/b/u in pre tags (FormatPostingText module)"
