added htms flags also to last visitors in federation page
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5954 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -337,7 +337,7 @@ foxtrick.GuestbookHTMSFlags.desc=Show user flags provided by HTMS in guestbook p
 foxtrick.GuestbookHTMSFlags.AddHTMSFlags.desc=Enable the user flag
 foxtrick.GuestbookHTMSFlags.HideAnswerToLinks.desc=Hides the "answer to" link in each guestbook entry
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToSupporters.desc=Adds the user flags to the supporter list in the team page
-foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToVisitors.desc=Adds the user flags to the visitor list in the team page, series page and youth series page
+foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToVisitors.desc=Adds the user flags to the visitor list in the team page, series (senior and youth) page and federation page
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToOldies.desc=Adds the user flags on team list in old players and coaches list
 
 # -----------------------------------------------------------------------------
