added new module: htms-points.js
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5956 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -339,6 +339,8 @@ foxtrick.GuestbookHTMSFlags.HideAnswerToLinks.desc=Hides the "answer to" link in
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToSupporters.desc=Adds the user flags to the supporter list in the team page
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToVisitors.desc=Adds the user flags to the visitor list in the team page, series (senior and youth) page and federation page
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToOldies.desc=Adds the user flags on team list in old players and coaches list
+foxtrick.HTMSPoints.desc=Shows the training points calculated with HTMS skill table on the player page
+foxtrick.HTMSPoints.AddToPlayerPage.desc=Adds the points to the player page
 
 # -----------------------------------------------------------------------------
 
