--- a/manifest.json
+++ b/manifest.json
@@ -85,6 +85,7 @@
 			"content/shortcuts_and_tweaks/transfer-search-result-filters.js",
 			"content/shortcuts_and_tweaks/nt-peek.js",
 			"content/shortcuts_and_tweaks/extended-player-details.js",
+			"content/shortcuts_and_tweaks/htms-points.js",
 			"content/presentation/original-face.js",
 			"content/presentation/move-player-statement.js",
 			"content/presentation/personality-images.js",
