localized htmsPoints description small changes to the presentation
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5960 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -814,6 +814,9 @@ foxtrick.htmsStatistics.prediction=Predicted result
 foxtrick.htmsStatistics.windrawloss=win/draw/loss
 foxtrick.htmsStatistics.linkcaption=Match Analysis by HTMS
 foxtrick.htmsStatistics.changePrediction=Change prediction
+foxtrick.htmsPoints.ability=Ability
+foxtrick.htmsPoints.potential=Potential
+foxtrick.htmsPoints.points=HTMS Points
 
 #actions
 Copy=Copy
