htms-points.js: remove info icon and l10n string changes.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5961 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -814,9 +814,10 @@ foxtrick.htmsStatistics.prediction=Predicted result
 foxtrick.htmsStatistics.windrawloss=win/draw/loss
 foxtrick.htmsStatistics.linkcaption=Match Analysis by HTMS
 foxtrick.htmsStatistics.changePrediction=Change prediction
-foxtrick.htmsPoints.ability=Ability
-foxtrick.htmsPoints.potential=Potential
-foxtrick.htmsPoints.points=HTMS Points
+
+# HTMSPoints
+HTMSPoints=HTMS Points
+HTMSPoints.AbilityAndPotential=Ability: %1 / Potential: %2
 
 #actions
 Copy=Copy
