Add FriendlyInterface module.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5964 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -340,7 +340,9 @@ foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToSupporters.desc=Adds the user flags to
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToVisitors.desc=Adds the user flags to the visitor list in the team page, series (senior and youth) page and federation page
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToOldies.desc=Adds the user flags on team list in old players and coaches list
 foxtrick.HTMSPoints.desc=Shows the training points calculated with HTMS skill table on the player page
-
+foxtrick.FriendlyInterface.desc=Tweaks to provide friendlier interface
+foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Show full player names in match line up page
+foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Display national teams as links for national players
 # -----------------------------------------------------------------------------
 
 
