--- a/manifest.json
+++ b/manifest.json
@@ -110,6 +110,7 @@
 			"content/presentation/old-style-face.js",
 			"content/presentation/guestbook-htms-flags.js",
 			"content/presentation/move-manager-online.js",
+			"content/presentation/friendly-interface.js",
 			"content/links/links.js",
 			"content/links/links-custom.js",
 			"content/links/links-league.js",
