foxtrick.properties: append colon to "HTMS Points".
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5966 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -818,7 +818,7 @@ foxtrick.htmsStatistics.linkcaption=Match Analysis by HTMS
 foxtrick.htmsStatistics.changePrediction=Change prediction
 
 # HTMSPoints
-HTMSPoints=HTMS Points
+HTMSPoints=HTMS Points:
 HTMSPoints.AbilityAndPotential=Ability: %1 / Potential: %2
 
 #actions
