final (hope) fixing for htms points on transfer result page with filters added the possibility to have htms points on own player list, with the specific option
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5974 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -342,6 +342,7 @@ foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToOldies.desc=Adds the user flags on tea
 foxtrick.HTMSPoints.desc=Shows the training points for a player calculated with HTMS skill table
 foxtrick.HTMSPoints.addToPlayer.desc=Adds the points to the player page
 foxtrick.HTMSPoints.addToSearchResult.desc=Adds the points to each player in the transfer search result page
+foxtrick.HTMSPoints.addToPlayerList.desc=Adds the points ot each player in our own player list
 foxtrick.FriendlyInterface.desc=Tweaks to provide friendlier interface
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Show full player names in match line up page
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Display national teams as links for national players
