--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -339,10 +339,10 @@ foxtrick.GuestbookHTMSFlags.HideAnswerToLinks.desc=Hides the "answer to" link in
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToSupporters.desc=Adds the user flags to the supporter list in the team page
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToVisitors.desc=Adds the user flags to the visitor list in the team page, series (senior and youth) page and federation page
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToOldies.desc=Adds the user flags on team list in old players and coaches list
-foxtrick.HTMSPoints.desc=Shows the training points for a player calculated with HTMS skill table
-foxtrick.HTMSPoints.addToPlayer.desc=Adds the points to the player page
-foxtrick.HTMSPoints.addToSearchResult.desc=Adds the points to each player in the transfer search result page
-foxtrick.HTMSPoints.addToPlayerList.desc=Adds the points ot each player in our own player list
+foxtrick.HTMSPoints.desc=Show the training points for a player calculated with HTMS skill table
+foxtrick.HTMSPoints.AddToPlayer.desc=Show on player page
+foxtrick.HTMSPoints.AddToSearchResult.desc=Show on transfer search result page
+foxtrick.HTMSPoints.AddToPlayerList.desc=Show on player list page
 foxtrick.FriendlyInterface.desc=Tweaks to provide friendlier interface
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Show full player names in match line up page
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Display national teams as links for national players
