skill-table.js: add HTMS Points stuffs.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5981 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -513,6 +513,11 @@ Keeper.abbr=KP
 Set_pieces=Set pieces
 Set_pieces.abbr=SP
 
+HTMS_Ability=HTMS Points Ability
+HTMS_Ability.abbr=Ability
+HTMS_Potential=HTMS Points Potential
+HTMS_Potential.abbr=Potential
+
 PlayerCategory=Player category
 PlayerCategory.abbr=Ca
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
