Unify file naming style.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5992 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,13 @@
 			"content/pages.js",
 			"content/l10n.js",
 			"content/helper.js",
-			"content/xml_load.js",
+			"content/xml-load.js",
 			"content/stats.js",
 			"content/redirections.js",
 			"content/read-ht-prefs.js",
 			"content/preferences-dialog-html.js",
 			"content/preferences-on-page.js",
-			"content/forum_stage.js",
+			"content/forum-stage.js",
 			"content/header-copy-icons.js",
 			"content/util/currency.js",
 			"content/util/note.js",
@@ -50,42 +50,42 @@
 			"content/matches/match-income.js",
 			"content/matches/copy-ratings.js",
 			"content/matches/htms-statistics.js",
-			"content/shortcuts_and_tweaks/table-sort.js",
-			"content/shortcuts_and_tweaks/flag-collection-to-map.js",
-			"content/shortcuts_and_tweaks/median-transfer-price.js",
-			"content/shortcuts_and_tweaks/transfer-search-filters.js",
-			"content/shortcuts_and_tweaks/transfer-deadline.js",
-			"content/shortcuts_and_tweaks/youth-skill-notes.js",
-			"content/shortcuts_and_tweaks/manager-buttons.js",
-			"content/shortcuts_and_tweaks/confirm-actions.js",
-			"content/shortcuts_and_tweaks/copy-player-ad.js",
-			"content/shortcuts_and_tweaks/team-stats.js",
-			"content/shortcuts_and_tweaks/history-stats.js",
-			"content/shortcuts_and_tweaks/team-select-box.js",
-			"content/shortcuts_and_tweaks/senior-team-shortcuts.js",
-			"content/shortcuts_and_tweaks/extra-shortcuts.js",
-			"content/shortcuts_and_tweaks/copy-match-id.js",
-			"content/shortcuts_and_tweaks/context-menu-copy.js",
-			"content/shortcuts_and_tweaks/copy-training-report.js",
-			"content/shortcuts_and_tweaks/player-birthday.js",
-			"content/shortcuts_and_tweaks/season-stats.js",
-			"content/shortcuts_and_tweaks/youth-skill-hide-unknown.js",
-			"content/shortcuts_and_tweaks/skill-table.js",
-			"content/shortcuts_and_tweaks/tables.js",
-			"content/shortcuts_and_tweaks/cross-table.js",
-			"content/shortcuts_and_tweaks/election-table.js",
-			"content/shortcuts_and_tweaks/lineup-shortcut.js",
-			"content/shortcuts_and_tweaks/youth-promotes.js",
-			"content/shortcuts_and_tweaks/last-login.js",
-			"content/shortcuts_and_tweaks/league-and-match-chat.js",
-			"content/shortcuts_and_tweaks/rapid-id.js",
-			"content/shortcuts_and_tweaks/extra-player-info.js",
-			"content/shortcuts_and_tweaks/player-filters.js",
-			"content/shortcuts_and_tweaks/youth-series-estimation.js",
-			"content/shortcuts_and_tweaks/transfer-search-result-filters.js",
-			"content/shortcuts_and_tweaks/nt-peek.js",
-			"content/shortcuts_and_tweaks/extended-player-details.js",
-			"content/shortcuts_and_tweaks/htms-points.js",
+			"content/shortcuts-and-tweaks/table-sort.js",
+			"content/shortcuts-and-tweaks/flag-collection-to-map.js",
+			"content/shortcuts-and-tweaks/median-transfer-price.js",
+			"content/shortcuts-and-tweaks/transfer-search-filters.js",
+			"content/shortcuts-and-tweaks/transfer-deadline.js",
+			"content/shortcuts-and-tweaks/youth-skill-notes.js",
+			"content/shortcuts-and-tweaks/manager-buttons.js",
+			"content/shortcuts-and-tweaks/confirm-actions.js",
+			"content/shortcuts-and-tweaks/copy-player-ad.js",
+			"content/shortcuts-and-tweaks/team-stats.js",
+			"content/shortcuts-and-tweaks/history-stats.js",
+			"content/shortcuts-and-tweaks/team-select-box.js",
+			"content/shortcuts-and-tweaks/senior-team-shortcuts.js",
+			"content/shortcuts-and-tweaks/extra-shortcuts.js",
+			"content/shortcuts-and-tweaks/copy-match-id.js",
+			"content/shortcuts-and-tweaks/context-menu-copy.js",
+			"content/shortcuts-and-tweaks/copy-training-report.js",
+			"content/shortcuts-and-tweaks/player-birthday.js",
+			"content/shortcuts-and-tweaks/season-stats.js",
+			"content/shortcuts-and-tweaks/youth-skill-hide-unknown.js",
+			"content/shortcuts-and-tweaks/skill-table.js",
+			"content/shortcuts-and-tweaks/tables.js",
+			"content/shortcuts-and-tweaks/cross-table.js",
+			"content/shortcuts-and-tweaks/election-table.js",
+			"content/shortcuts-and-tweaks/lineup-shortcut.js",
+			"content/shortcuts-and-tweaks/youth-promotes.js",
+			"content/shortcuts-and-tweaks/last-login.js",
+			"content/shortcuts-and-tweaks/league-and-match-chat.js",
+			"content/shortcuts-and-tweaks/rapid-id.js",
+			"content/shortcuts-and-tweaks/extra-player-info.js",
+			"content/shortcuts-and-tweaks/player-filters.js",
+			"content/shortcuts-and-tweaks/youth-series-estimation.js",
+			"content/shortcuts-and-tweaks/transfer-search-result-filters.js",
+			"content/shortcuts-and-tweaks/nt-peek.js",
+			"content/shortcuts-and-tweaks/extended-player-details.js",
+			"content/shortcuts-and-tweaks/htms-points.js",
 			"content/presentation/original-face.js",
 			"content/presentation/move-player-statement.js",
 			"content/presentation/personality-images.js",
@@ -140,7 +140,7 @@
 			"content/alert/new-mail.js",
 			"content/alert/live-alert.js",
 			"content/presentation/currency-converter.js",
-			"content/shortcuts_and_tweaks/team-popup-links.js",
+			"content/shortcuts-and-tweaks/team-popup-links.js",
 			"content/modules.js",
 			"content/foxtrick.js",
 			"content/loader-chrome.js"
