--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -344,7 +344,7 @@ foxtrick.HTMSPoints.AddToPlayer.desc=Show on player page
 foxtrick.HTMSPoints.AddToSearchResult.desc=Show on transfer search result page
 foxtrick.HTMSPoints.AddToPlayerList.desc=Show on player list page
 foxtrick.FriendlyInterface.desc=Tweaks to provide friendlier interface
-foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Show full player names in match line up page
+foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Show player names without ellipses in match line up page
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Display national teams as links for national players
 # -----------------------------------------------------------------------------
 
