series-flags.js: renamed from GuestbookHTMSFlags, complete rewrite.
Module renamed from GuestbookHTMSFlags to SeriesFlags.
The HideAnswerTo option is moved to module FriendlyInterface.
Option renamed.
Rewrote from scratch.

git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6007 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -333,12 +333,11 @@ foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (
 foxtrick.LiveAlert.desc=Alert HT Live goals
 foxtrick.OldStyleFace.desc=Show faces in old Hattrick style
 foxtrick.NtPeek.desc=Peeks NT/U20 matches at My Hattrick
-foxtrick.GuestbookHTMSFlags.desc=Show user flags provided by HTMS in guestbook posts module
-foxtrick.GuestbookHTMSFlags.AddHTMSFlags.desc=Enable the user flag
-foxtrick.GuestbookHTMSFlags.HideAnswerToLinks.desc=Hides the "answer to" link in each guestbook entry
-foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToSupporters.desc=Adds the user flags to the supporter list in the team page
-foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToVisitors.desc=Adds the user flags to the visitor list in the team page, series (senior and youth) page and federation page
-foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToOldies.desc=Adds the user flags on team list in old players and coaches list
+foxtrick.SeriesFlags.desc=Show series flags beside user and/or team links (images provided by HTMS)
+foxtrick.SeriesFlags.Guestbook.desc=Show in guest book
+foxtrick.SeriesFlags.Supporters.desc=Show in the supporters box of a team
+foxtrick.SeriesFlags.Visitors.desc=Show in recent visitors box
+foxtrick.SeriesFlags.Oldies.desc=Show in old players and coaches page of a team
 foxtrick.HTMSPoints.desc=Show the training points for a player calculated with HTMS skill table
 foxtrick.HTMSPoints.AddToPlayer.desc=Show on player page
 foxtrick.HTMSPoints.AddToSearchResult.desc=Show on transfer search result page
@@ -346,6 +345,7 @@ foxtrick.HTMSPoints.AddToPlayerList.desc=Show on player list page
 foxtrick.FriendlyInterface.desc=Tweaks to provide friendlier interface
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Show player names without ellipses in match line up page
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Display national teams as links for national players
+foxtrick.FriendlyInterface.HideAnswerTo.desc=Hide answer-to links in guest book
 # -----------------------------------------------------------------------------
 
 
