--- a/manifest.json
+++ b/manifest.json
@@ -15,8 +15,12 @@
 			"content/preferences-on-page.js",
 			"content/forum-stage.js",
 			"content/header-copy-icons.js",
+			"content/core.js",
 			"content/util/currency.js",
+			"content/util/html.js",
+			"content/util/misc.js",
 			"content/util/note.js",
+			"content/util/string.js",
 			"content/util/time.js",
 			"content/pages/pages.js",
 			"content/pages/all.js",
